--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,3 +1,5 @@
+<div id="notice"><%= notice %></div>
+
 <h1>My Dogs</h1>
 
 <%= link_to "Add a new dog", new_dog_path, class: 'btn btn-info' %>
@@ -19,6 +21,7 @@
         <td><%= puppy.name %></td>
         <td><%= puppy.breed %></td>
         <td><%= puppy.age %></td>
+        <td><%= link_to 'show', dog_path(puppy) %></td>
       </tr>
     <% end %>
   </tbody>
