--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -22,6 +22,7 @@
         <td><%= puppy.breed %></td>
         <td><%= puppy.age %></td>
         <td><%= link_to 'show', dog_path(puppy) %></td>
+        <td><%= link_to 'edit', edit_dog_path(puppy) %></td>
       </tr>
     <% end %>
   </tbody>
