Add owner to database

--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -7,6 +7,10 @@
   <strong>ID: </strong><%= @dog.id %>
 </p>
 
+<p>
+  <strong>Owner: </strong><%= @dog.owner %>
+</p>
+
 <!-- Breed -->
 <p>
   <strong>Breed: </strong><%= @dog.breed %>
