--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -11,5 +11,9 @@
   <%= form_field.number_field :age %>
   <br>
 
+  <%= form_field.label :owner %>
+  <%= form_field.text_field :owner %>
+  <br>
+
   <%= form_field.submit %>
 <% end %>
