--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -9,8 +9,10 @@
     <tr>
       <th>ID</th>
       <th>Name</th>
+      <th>Owner</th>
       <th>Breed</th>
       <th>Age</th>
+      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -19,6 +21,7 @@
       <tr>
         <td><%= puppy.id %></td>
         <td><%= puppy.name %></td>
+        <td><%= puppy.owner %></td>
         <td><%= puppy.breed %></td>
         <td><%= puppy.age %></td>
         <td><%= link_to 'show', dog_path(puppy) %></td>
