--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -8,7 +8,7 @@
 </p>
 
 <p>
-  <strong>Owner: </strong><%= @dog.owner %>
+  <strong>Owner: </strong><%= @dog.owner.try(:name) %>
 </p>
 
 <!-- Breed -->
