--- a/app/views/dogs/_form.html.erb
+++ b/app/views/dogs/_form.html.erb
@@ -3,8 +3,8 @@
   <%= form_field.text_field :name %>
   <br>
 
-  <%= form_field.label :breed %>
-  <%= form_field.text_field :breed %>
+  <%= form_field.label :breed_id %>
+  <%= form_field.collection_select :breed_id, Breed.all, :id, :name %>
   <br>
 
   <%= form_field.label :age %>
